--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Larry Myers",
-  "name": "jasmine-reporters",
+  "name": "jasmine-reporters-1.x",
   "description": "Reporters for the Jasmine BDD Framework",
   "version": "1.0.1",
   "homepage": "https://github.com/larrymyers/jasmine-reporters",
